@@ -429,6 +429,9 @@ Optimizations
 Other Changes
 ----------------------
 
+* SOLR-8294: Cleanup solrconfig.xmls under solr/example/example-DIH/solr (removed
+  obsolete clustering handler sections). (Dawid Weiss)
+
 * SOLR-7969: Unavailable clustering engines should not fail the core. (Dawid Weiss)
 
 * SOLR-7790, SOLR-7791: Update Carrot2 clustering component to 
